@@ -1,18 +1,20 @@
 package com.jazztech.cardholderapi.service.cardholder;
 
 import static com.jazztech.cardholderapi.service.cardholder.CardHolderFactory.cardHolderEntityFactory;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.when;
 
 import com.jazztech.cardholderapi.controller.response.CardHolderResponse;
-import com.jazztech.cardholderapi.handler.exceptions.CardHolderNotFoundException;
 import com.jazztech.cardholderapi.handler.exceptions.InvalidCardHolderStatusException;
-import com.jazztech.cardholderapi.mapper.CardHolderMapper;
 import com.jazztech.cardholderapi.mapper.CardHolderMapperImpl;
 import com.jazztech.cardholderapi.repository.CardHolderRepository;
+import com.jazztech.cardholderapi.repository.entity.cardholder.CardHolderEntity;
+import com.jazztech.cardholderapi.service.ServiceVerifications;
 import com.jazztech.cardholderapi.utils.Status;
+import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
 import org.junit.jupiter.api.DisplayNameGeneration;
 import org.junit.jupiter.api.DisplayNameGenerator;
@@ -28,31 +30,39 @@ import org.mockito.junit.jupiter.MockitoExtension;
 @ExtendWith(MockitoExtension.class)
 @DisplayNameGeneration(DisplayNameGenerator.ReplaceUnderscores.class)
 class SearchCardHolderServiceTest {
+
+    @Mock
+    private ServiceVerifications serviceVerifications;
     @Mock
     private CardHolderRepository cardHolderRepository;
 
     @Spy
-    private CardHolderMapper cardHolderMapper = new CardHolderMapperImpl();
+    private CardHolderMapperImpl cardHolderMapper;
 
     @Captor
-    private ArgumentCaptor<UUID> cardHolderUUID;
+    private ArgumentCaptor<UUID> uuidCaptor;
     @Captor
     private ArgumentCaptor<Status> cardHolderStatus;
 
     @InjectMocks
     private SearchCardHolderService searchCardHolderService;
 
-
     @Test
     void should_return_all_card_holders() {
-        when(cardHolderRepository.findAll()).thenReturn(List.of(cardHolderEntityFactory()));
+        final List<CardHolderEntity> cardHolderEntities = Collections.singletonList(cardHolderEntityFactory());
+        when(cardHolderRepository.findAll()).thenReturn(cardHolderEntities);
+
         final List<CardHolderResponse> cardHolderResponses = searchCardHolderService.getAllCardholders();
         assertNotNull(cardHolderResponses);
+        assertEquals(cardHolderEntities.size(), cardHolderResponses.size());
+        assertEquals(cardHolderEntities.get(0).getStatus(), cardHolderResponses.get(0).status());
+        assertEquals(cardHolderEntities.get(0).getId(), cardHolderResponses.get(0).id());
+        assertEquals(cardHolderEntities.get(0).getCreditLimit(), cardHolderResponses.get(0).creditLimit());
     }
 
     @Test
     void should_return_all_card_holders_by_status() {
-        when(cardHolderRepository.findAllByStatus(cardHolderStatus.capture())).thenReturn(List.of(cardHolderEntityFactory()));
+        when(cardHolderRepository.findAllByStatus(cardHolderStatus.capture())).thenReturn(Collections.singletonList(cardHolderEntityFactory()));
         final List<CardHolderResponse> cardHolderResponses = searchCardHolderService.getAllCardholdersByStatus("active");
         assertNotNull(cardHolderResponses);
         assertEquals(cardHolderStatus.getValue(), cardHolderResponses.get(0).status());
@@ -69,18 +79,11 @@ class SearchCardHolderServiceTest {
 
     @Test
     void should_return_a_card_holder_if_it_exists_by_id() {
-        when(cardHolderRepository.findById(cardHolderUUID.capture())).thenReturn(Optional.of(cardHolderEntityFactory()));
-        final CardHolderResponse creditAnalysisById = searchCardHolderService.getCardHolderById(cardHolderEntityFactory().getId());
-        assertEquals(creditAnalysisById.id(), cardHolderUUID.getValue());
+        when(serviceVerifications.getCardHolderById(uuidCaptor.capture())).thenReturn(cardHolderEntityFactory());
+        final CardHolderResponse cardHolderResponse = searchCardHolderService.getCardHolderById(cardHolderEntityFactory().getId());
+        assertEquals(cardHolderResponse.id(), uuidCaptor.getValue());
+        assertEquals(cardHolderEntityFactory().getCreditLimit(), cardHolderResponse.creditLimit());
     }
 
-    @Test
-    void should_throw_CardHolderNotFoundException_if_it_does_not_exist_by_id() {
-        final UUID uuid = UUID.randomUUID();
-        when(cardHolderRepository.findById(cardHolderUUID.capture())).thenReturn(Optional.empty());
-        CardHolderNotFoundException exception =
-                assertThrows(CardHolderNotFoundException.class, () -> searchCardHolderService.getCardHolderById(uuid));
-        assertEquals("Card Holder not found by id %s".formatted(uuid), exception.getMessage());
-    }
 
 }
