@@ -1,5 +1,6 @@
 package com.jazztech.cardholderapi.service.creditcard;
 
+import static com.jazztech.cardholderapi.service.cardholder.CardHolderFactory.cardHolderEntityFactory;
 import static com.jazztech.cardholderapi.service.creditcard.CreditCardFactory.creditCardEntityFactory;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -12,8 +13,10 @@ import com.jazztech.cardholderapi.mapper.CreditCardMapper;
 import com.jazztech.cardholderapi.mapper.CreditCardMapperImpl;
 import com.jazztech.cardholderapi.repository.CreditCardRepository;
 import com.jazztech.cardholderapi.repository.entity.creditcard.CreditCardEntity;
+import com.jazztech.cardholderapi.service.ServiceVerifications;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 import org.junit.jupiter.api.DisplayNameGeneration;
 import org.junit.jupiter.api.DisplayNameGenerator;
@@ -31,21 +34,25 @@ import org.mockito.junit.jupiter.MockitoExtension;
 class SearchCreditCardServiceTest {
 
     @Captor
-    ArgumentCaptor<UUID> uuidCaptor;
+    ArgumentCaptor<UUID> cardHolderIdCaptor;
+    @Captor
+    ArgumentCaptor<UUID> creditCardIdCaptor;
 
+    @Mock
+    private ServiceVerifications serviceVerifications;
     @Mock
     private CreditCardRepository creditCardRepository;
 
     @Spy
-    private CreditCardMapper creditCardMapper = new CreditCardMapperImpl();
+    private CreditCardMapperImpl creditCardMapper;
 
     @InjectMocks
     private SearchCreditCardService searchCreditCardService;
 
     @Test
     void should_return_a_list_of_credit_card_if_it_exists() {
-        final List<CreditCardEntity> creditCardEntities = List.of(creditCardEntityFactory());
-        when(creditCardRepository.findAllByCardHolderId(uuidCaptor.capture())).thenReturn(creditCardEntities);
+        final List<CreditCardEntity> creditCardEntities = Collections.singletonList(creditCardEntityFactory());
+        when(creditCardRepository.findAllByCardHolderId(cardHolderIdCaptor.capture())).thenReturn(creditCardEntities);
 
         final List<CreditCardResponse> creditCardResponses =
                 searchCreditCardService.getAllCardsByCardHolderId(creditCardEntityFactory().getCardHolderId());
@@ -58,11 +65,25 @@ class SearchCreditCardServiceTest {
 
     @Test
     void should_throw_NoCreditCardsFoundException() {
-        when(creditCardRepository.findAllByCardHolderId(uuidCaptor.capture())).thenReturn(Collections.emptyList());
+        when(creditCardRepository.findAllByCardHolderId(cardHolderIdCaptor.capture())).thenReturn(Collections.emptyList());
 
         final NoCreditCardsFoundException exception = assertThrows(NoCreditCardsFoundException.class,
                 () -> searchCreditCardService.getAllCardsByCardHolderId(creditCardEntityFactory().getCardHolderId()));
 
         assertEquals("No credit card found, check the clientId", exception.getMessage());
+    }
+
+    @Test
+    void should_return_a_credit_card_if_it_exists() {
+        when(serviceVerifications.getCreditCardById(cardHolderIdCaptor.capture(), creditCardIdCaptor.capture())).thenReturn(creditCardEntityFactory());
+
+        final CreditCardResponse creditCardResponse =
+                searchCreditCardService.getCreditCardById(creditCardEntityFactory().getCardHolderId(), creditCardEntityFactory().getId());
+
+        assertNotNull(creditCardResponse);
+        assertEquals(creditCardEntityFactory().getId(), creditCardResponse.cardId());
+        assertEquals(creditCardEntityFactory().getCvv(), creditCardResponse.cvv());
+        assertEquals(creditCardEntityFactory().getDueDate(), creditCardResponse.dueDate());
+        assertEquals(creditCardEntityFactory().getCardLimit(), creditCardResponse.limit());
     }
 }
